<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gunual</string>

    <string name="favorite">Favorite</string>
    <string name="about_us">About us</string>

    <string name="add">Add</string>
    <string name="search">search</string>

    <string name="save_button">Save</string>
    <string name="weapon_title">Weapon"s title</string>
    // Table layout
    <string name="country">Country:&#032;&#032;</string>
    <string name="year_of_production">Year of production:&#032;&#032;</string>
    <string name="type_of_bullet">Type of bullet:&#032;&#032;</string>
    <string name="muzzle_velocity">Muzzle velocity:&#032;&#032;</string>
    <string name="effective_range">Effective range:&#032;&#032;</string>
    <string name="feed_system">Feed system:&#032;&#032;</string>
    <string name="length">Length:&#032;&#032;</string>
    <string name="barrel_length">Barrel length:&#032;&#032;</string>
    <string name="weight">Weight:&#032;&#032;</string>
    <string name="rapid_fire">Rapid fire:&#032;&#032;</string>
    <string name="cost">Cost:&#032;&#032;</string>

    <string name="no_connection_main">Oh shucks!</string>
    <string name="no_connection_description">"Slow or not internet connection.\nPlease check your internet settings"</string>

    <string name="email">gunual.application@gmail.com</string>
    <string name="phone_number" tools:ignore="TypographyDashes">+7-908-189-00-88</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="buy_the_gun">Buy the gun</string>
    <string name="buy_ammo">Buy ammo</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="action_settings">Settings</string>

    <string name="continue_button">Continue</string>
    <string name="nothing_not_found">Nothing not found</string>

</resources>
