...
        android:text="@string/nothing_not_found"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:theme="@style/CustomProgressBar"
        android:visibility="visible" />

...
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_action_name"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>
...
