...
                <!--android:layout_marginLeft="24dp"-->
                <!--android:layout_marginRight="24dp"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:weightSum="2">-->

                <!--<Button-->
                    <!--android:id="@+id/buy_gun_button"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/buy_the_gun"-->
                    <!--android:layout_weight="1">-->

                <!--</Button>-->

                <!--<Button-->
                    <!--android:id="@+id/buy_ammo_button"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="@string/buy_ammo">-->

                <!--</Button>-->
...
